# superpaflaballe

./: CMakeLists.txt  README.md
assets/: ned.json
assets/intro/: devnewton.json
cmake/: FindSDL2_gfx.cmake  FindSDL2_mixer.cmake
licenses/: code.txt  data.txt
src/: assets.cpp  assets.h  bourrines.cpp  bourrines.h  bourrines_benchmark.cpp  bourrines_benchmark.h  framerate.cpp  framerate.h  game.cpp  game.h  intro.cpp  intro.h  main.cpp  nanim.cpp  nanim.h  sdl_exception.cpp  sdl_exception.h
src/bourrines/: bourrines.h  entity.h  system.h  world.h
src/bourrines/stores/: array_of_struct.h  struct_of_array.h
src/scenimp/: assets.cpp  assets.h  game.cpp  game.h  geometry.h  group.cpp  group.h  label.cpp  label.h  nanim.cpp  nanim.h  node.cpp  node.h  progressbar.cpp  progressbar.h  rectangle.cpp  rectangle.h  rendering.cpp  rendering.h  scene.cpp  scene.h  screen.cpp  screen.h  sdl_exception.cpp  sdl_exception.h  shape_base.cpp  shape_base.h  sprite.cpp  sprite.h  transform.cpp  transform.h
